add container fluid

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
-    <!-- Bootstrap container -->
-    <div class="container">
+    <!-- Bootstrap container fluid -->
+    <div class="container-fluid">
         <h1>Bonjour !!</h1>
     </div>
     <!-- Utiliser le Bundle JavaScript du bootstrap 5 -->
