--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
 <body>
     <!-- Bootstrap container fluid -->
     <div class="container-fluid">
-        <h1>Bonjour !!</h1>
+        <button type="button" class="btn btn-primary">Primary</button>
+        <button type="button" class="btn btn-secondary">Secondary</button>
+        <button type="button" class="btn btn-success">Success</button>
+        <button type="button" class="btn btn-danger">Danger</button>
+        <button type="button" class="btn btn-warning">Warning</button>
+        <button type="button" class="btn btn-info">Info</button>
+        <button type="button" class="btn btn-light">Light</button>
+        <button type="button" class="btn btn-dark">Dark</button>
+        <button type="button" class="btn btn-link">Link</button>
     </div>
     <!-- Utiliser le Bundle JavaScript du bootstrap 5 -->
     <script src="js/bootstrap.bundle.min.js"></script>
