--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
     <!-- Bootstrap container fluid -->
     <div class="container-fluid">
-        <span class="badge bg-primary">Primary</span>
-        <span class="badge bg-secondary">Secondary</span>
-        <span class="badge bg-success">Success</span>
-        <span class="badge bg-danger">Danger</span>
-        <span class="badge bg-warning text-dark">Warning</span>
-        <span class="badge bg-info text-dark">Info</span>
-        <span class="badge bg-light text-dark">Light</span>
-        <span class="badge bg-dark">Dark</span>
+        <span class="badge rounded-pill bg-primary">Primary</span>
+        <span class="badge rounded-pill bg-secondary">Secondary</span>
+        <span class="badge rounded-pill bg-success">Success</span>
+        <span class="badge rounded-pill bg-danger">Danger</span>
+        <span class="badge rounded-pill bg-warning text-dark">Warning</span>
+        <span class="badge rounded-pill bg-info text-dark">Info</span>
+        <span class="badge rounded-pill bg-light text-dark">Light</span>
+        <span class="badge rounded-pill bg-dark">Dark</span>
     </div>
     <!-- Utiliser le Bundle JavaScript du bootstrap 5 -->
     <script src="js/bootstrap.bundle.min.js"></script>
