--- a/index.html
+++ b/index.html
@@ -5,14 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Premier pas avec boostrap 5</title>
     <!-- Utiliser le style CSS du boostrap 5 -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
 </head>
-<body>
-    <!-- Bootstrap container -->
-    <div class="container">
-        <h1>Bonjour !!</h1>
-    </div>
+<body> 
     <!-- Utiliser le Bundle JavaScript du bootstrap 5 -->
-    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
