--- a/index.html
+++ b/index.html
@@ -1,14 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Premier pas avec boostrap 5</title>
+    <title>List des utilisateurs</title>
     <!-- Utiliser le style CSS du boostrap 5 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
 </head>
-<body> 
+
+<body>
+    <div class="container-fluid">
+        <button class="btn btn-primary">
+            Ajouter un utilisateur
+        </button>
+        <table class="table table-hover table-striped">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Nom</th>
+                    <th>Prénom</th>
+                    <th>Status</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th>1</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>
+                        <span class="badge rounded-pill bg-success">Activé</span>
+                    </td>
+                    <td>
+                        <button class="btn btn-info text-white">Modifier</button>
+                        <button class="btn btn-danger">Supprimer</button>
+                    </td>
+                </tr>
+                <tr>
+                    <th>2</th>
+                    <td>Jacob</td>
+                    <td>Thornton</td>
+                    <td>
+                        <span class="badge rounded-pill bg-danger">Desactivé</span>
+                    </td>
+                    <td>
+                        <button class="btn btn-info text-white">Modifier</button>
+                        <button class="btn btn-danger">Supprimer</button>
+                    </td>
+                </tr>
+                <tr>
+                    <th>3</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>
+                        <span class="badge rounded-pill bg-success">Activé</span>
+                    </td>
+                    <td>
+                        <button class="btn btn-info text-white">Modifier</button>
+                        <button class="btn btn-danger">Supprimer</button>
+                    </td>
+                </tr>
+                <tr>
+                    <th>4</th>
+                    <td>Jacob</td>
+                    <td>Thornton</td>
+                    <td>
+                        <span class="badge rounded-pill bg-warning">En cours</span>
+                    </td>
+                    <td>
+                        <button class="btn btn-info text-white">Modifier</button>
+                        <button class="btn btn-danger">Supprimer</button>
+                    </td>
+                </tr>
+                <tr>
+                    <th>5</th>
+                    <td>Larry the Bird</td>
+                    <td>@twitter</td>
+                    <td>
+                        <span class="badge rounded-pill bg-success">Activé</span>
+                    </td>
+                    <td>
+                        <button class="btn btn-info text-white">Modifier</button>
+                        <button class="btn btn-danger">Supprimer</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
     <!-- Utiliser le Bundle JavaScript du bootstrap 5 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
